# privategpt

./: .env  .env.example  .gitattributes  .gitignore  API_CONSISTENCY_REPORT.md  CLAUDE.md  CODEBASE_HEALTH_CHECK.md  DATABASE_SERVICE_COMPLETION.md  DEPENDENCY_HEALTH_ANALYSIS.md  FRONTEND_ISSUES_RESPONSE.md  GATEWAY.md  MCP_FRAMEWORK.md  Makefile  PROJECT.md  PROJECT_STRUCTURE.md  RAG_FOLDER_STRUCTURE.md  RAG_IMPLEMENTATION_PLAN.md  RAG_MCP_ROADMAP.md  RAG_MCP_SUMMARY.md  RAG_NAMING_CONVENTIONS.md  RAG_QUICK_START.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX.md  TASKS.md  TESTS.md  clear_ui_state.html  client_example.py  config.env.example  config.json  config_loader.py  create-test-conversations.sh  debug_mcp.py  demo_progress_tracking.sh  docker-compose-mac.yml  docker-compose.yml  env.example  frontend.md  manage_prompts.sh  mcp_demo_final.sh  (+33 more)
v1/: API_GATEWAY_IMPLEMENTATION_PLAN.md  KNOWLEDGE_SERVICE_COMPLETION.md  Makefile  PROJECT_STRUCTURE.md  README-v1.md  README_weaviate_service.md  REDIS_CONFIG_IMPLEMENTATION.md  config_loader.py  docker-compose.yml  download_test_datasets.py  pyproject.toml  start_service.sh
v1/config/elasticsearch/: elasticsearch.yml
v1/config/filebeat/: filebeat-setup.yml  filebeat.yml
v1/config/logstash/: logstash.conf  logstash.yml
v1/config/metricbeat/: setup-and-run.sh
v1/config/n8n/: simple-llama-test.json
v1/docker/auth-service/: Dockerfile  deployment-guide.md  init-db.sql  models.py  security.py  utils.py
v1/docker/auth-service/tests/: test_models.py
v1/docker/knowledge-service/: README.md  requirements.txt
v1/docker/knowledge-service/app/: __init__.py
v1/docker/n8n/: Dockerfile
v1/docker/shared/database/: __init__.py  base.py
v1/docker/shared/utils/: __init__.py  logging.py
v1/docker/streamlit/: app.py  pages_utils.py
v1/docker/streamlit/pages/: admin_panel.py  document_management.py  llm_chat.py
v1/docker/streamlit/utils/: document_processor.py
v1/docs/: logging_checklist.md
v1/docs/adr/: 0003-monorepo-migration.md
v1/docs/observability/: kibana_dashboard.ndjson
v1/new_docs/: v1_codebase.md
v1/scripts/: init-ollama.sh  setup-dashboard.sh  setup-n8n-workflows.sh
v1/src/privategpt/shared/: security.py
v2/: Makefile  docker-compose.yml  pyproject.toml
v2/docker/auth/: Dockerfile
v2/docker/base/: Dockerfile
v2/docker/filebeat/: filebeat.yml
v2/docker/knowledge/: Dockerfile
v2/docker/rag/: Dockerfile
v2/docker/tests/: Dockerfile
v2/docker/ui/: Dockerfile
v2/src/privategpt/shared/: __init__.py  logging.py  security.py  (+1 more)
v2/tests/: conftest.py
(+385 files in other folders)
