[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privategpt"
version = "0.1.0"
description = "PrivateGPT v2 monorepo"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PrivateGPT Team"}]

# Core runtime dependencies
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.6",
    "httpx>=0.27",
    "structlog>=24.1"
]

[tool.setuptools.packages.find]
where = ["src"]
